# fae-demo

./: .gitignore  .gitmodules  .travis.yml  ChangeLog.md  README.md  build.sh  buildElectron.sh  buildFrontEnd.sh  deploy-server.sh  package.json  package.yaml  postTX.sh  stack.yaml
client/: .eslintignore  .eslintrc  .gitignore  README.md  app.nix  auction-client.cabal  default.nix  fae-auction.cabal  package-lock.json  package.json  package.yaml  stack.yaml
client/app/: Main.hs  app.js  configureStore.js  index.html  reducers.js
client/app/actions/: auth.js  games.js  index.js  lobby.js  profile.js  socket.js  types.js
client/app/components/: ActionPanel.js  App.js  Board.js  Card.js  Footer.js  Game.js  Home.js  Lobby.js  NavBar.js  NotFoundPage.js  Profile.js  Seat.js  SignInForm.js  SignUpForm.js  Signout.js  SignupForm.js
client/app/containers/: AppContainer.js  GameContainer.js  HomeContainer.js  LobbyContainer.js  NavBarContainer.js  ProfileContainer.js  SignInFormContainer.js  SignUpFormContainer.js  SignupFormContainer.js
client/app/middleware/: socket.js
client/app/reducers/: auth.js  games.js  lobby.js  profile.js  rootReducer.js  socket.js
client/app/selectors/: auth.js  games.js  lobby.js  profile.js  route.js  socket.js
client/app/styles/: _common.scss  _layout.scss  _mixins.scss  _typography.scss  (+1 more)
client/config/: jest.config.js  webpack.base.babel.js  webpack.dev.babel.js  webpack.prod.babel.js
client/server/: index.js
client/src/: Auction.hs  CreateAuctionView.hs  Lib.hs  LobbyView.hs  Model.hs  SharedViews.hs  Types.hs  Views.hs
(+267 files in other folders)
