name:                fae-auction 
version:             0.0.1.0
synopsis:            Auction Demo For Fae 
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
      src
  build-depends:
      aeson,
      bytestring,
      ghcjs-base,
      base,
      containers,
      miso,
      text,
      time
  exposed-modules:
      Lib,
      Types
  default-language: Haskell2010

executable fae-auction
  main-is:             Main.hs
  build-depends:       aeson, bytestring, text, ghcjs-base, base, containers, miso, time
  hs-source-dirs:      src, app
  default-language: Haskell2010